@startuml A

class sizhu
{
    +_NianGan
    +_YueGan
    +_RiGan
    +_ShiGan
    +_NianZhi
    +_YueZhi
    +_RiZhi
    +_ShiZhi
    +LYear
    +LMonth
    +LDay
    +sizhu(unsigned long long, double)
    -_BirthTime
    -_Year
    -_Month
    -_Day
    -_Hour
    -_Minute
    -RYear
    -RMonth
    -RDay
    -RHour
    -RMinute
}

class StarBase
{
    +StarBase()
    +Palace
    +Name
}

class BodyPalace
{
    +BodyPalace()
}
class LifePalace
{
    +LifePalace()
}
class BrotherPalace
{
    +BrotherPalace()
}
class CouplePalace
{
    +CouplePalace()
}
class ChildrenPalace
{
    +ChildrenPalace()
}
class MoneyPalace
{
    +MoneyPalace()
}
class DiseasePalace
{
    +DiseasePalace()
}
class MigrationPalace
{
    +MigrationPalace()
}
class SlavePalace
{
    +SlavePalace()
}
class FunctionaryPalace
{
    +FunctionaryPalace()
}
class FarmlandPalace
{
    +FarmlandPalace()
}

class FortunePalace
{
    +FortunePalace()
}
class ParentPalace
{
    +ParentPalace()
}
class WuXingJuXing
{
    +WuXingJuXing()
}

class ZiWei
{
    +ZiWei()
}
class TianJi
{
    +TianJi()
}
class TaiYang
{
    +TaiYang()
}
class WuQu
{
    +WuQu()
}
class TianTong
{
    +TianTong()
}
class LianZhen
{
    +LianZhen()
}
class TianFu
{
    +TianFu()
}
class TaiYin
{
    +TaiYin()
}
class TanLang
{
    +TanLang()
}
class JuMen
{
    +JuMen()
}
class TianXiang
{
    +TianXiang()
}
class TianLiang
{
    +TianLiang()
}
class QiSha
{
    +QiSha()
}
class PoJun
{
    +PoJun()
}
class WenChang
{
    +WenChang()
}
class WenQu
{
    +WenQu()
}
class HuoXing
{
    +HuoXing()
}
class LingXing
{
    +LingXing()
}
class DiJie
{
    +DiJie()
}
class TianKong
{
    +TianKong()
}
class TaiFu
{
    +TaiFu()
}
class FengGao
{
    +FengGao()
}
class ZuoFu
{
    +ZuoFu()
}
class YouBi
{
    +YouBi()
}
class TianXing
{
    +TianXing()
}
class TianYao
{
    +TianYao()
}
class TianMa
{
    +TianMa()
}
class JieShen
{
    +JieShen()
}
class TianWu
{
    +TianWu()
}
class TianYue_2
{
    +TianYue_2()
}
class YinSha
{
    +YinSha()
}
class SanTai
{
    +SanTai()
}
class BaZuo
{
    +BaZuo()
}
class EnGuang
{
    +EnGuang()
}
class TianGui
{
    +TianGui()
}
class LuCun_
{
    +LuCun_()
}
class QingYang
{
    +QingYang()
}
class TuoLuo
{
    +TuoLuo()
}
class TianKui
{
    +TianKui()
}
class TianYue
{
    +TianYue()
}
class TianGuan
{
    +TianGuan()
}
class TianFu_2
{
    +TianFu_2()
}
class HuaLu
{
    +HuaLu()
}
class HuaQuan
{
    +HuaQuan()
}
class HuaKe
{
    +HuaKe()
}
class HuaJi
{
    +HuaJi()
}
class BoShi
{
    +BoShi()
}
class LiShi
{
    +LiShi()
}
class QingLong
{
    +QingLong()
}
class XiaoHao
{
    +XiaoHao()
}
class JiangJun
{
    +JiangJun()
}
class ZouShu
{
    +ZouShu()
}
class FeiLian
{
    +FeiLian()
}
class XiShen
{
    +XiShen()
}
class BingFu
{
    +BingFu()
}
class DaHao
{
    +DaHao()
}
class FuBing
{
    +FuBing()
}
class GuanFu
{
    +GuanFu()
}
class DiKong
{
    +DiKong()
}
class TianKu
{
    +TianKu()
}
class TianXu
{
    +TianXu()
}
class TianXu
{
    +TianXu()
}
class LongChi
{
    +LongChi()
}
class FengGe
{
    +FengGe()
}
class HongLuan
{
    +HongLuan()
}
class TianXi
{
    +TianXi()
}
class FeiLian_2
{
    +FeiLian_2()
}
class PoSui
{
    +PoSui()
}
class GuChen
{
    +GuChen()
}
class GuaSu
{
    +GuaSu()
}
class TianCai
{
    +TianCai()
}
class TianShou
{
    +TianShou()
}
class ChangSheng
{
    +ChangSheng()
}
class MuYu
{
    +MuYu()
}
Class GuanDai
{
    +GuanDai()
}
class LinGuan
{
    +LinGuan()
}
class DiWang
{
    +DiWang()
}
class ShuaiXing
{
    +ShuaiXing()
}
class BingXing
{
    +BingXing()
}
class SiXing
{
    +SiXing()
}
class MuXing
{
    +MuXing()
}
class JueXing
{
    +JueXing()
}
class TaiXing
{
    +TaiXing()
}
class YangXing
{
    +YangXing()
}


StarBase <|-- BodyPalace
StarBase <|-- LifePalace
StarBase <|-- BrotherPalace
StarBase <|-- CouplePalace
StarBase <|-- ChildrenPalace
StarBase <|-- MoneyPalace
StarBase <|-- DiseasePalace
StarBase <|-- MigrationPalace
StarBase <|-- SlavePalace
StarBase <|-- FunctionaryPalace
StarBase <|-- FarmlandPalace
StarBase <|-- FortunePalace
StarBase <|-- ParentPalace
StarBase <|-- ZiWei
StarBase <|-- TianJi
StarBase <|-- TaiYang
StarBase <|-- WuQu
StarBase <|-- TianTong
StarBase <|-- LianZhen
StarBase <|-- TianFu
StarBase <|-- TaiYin
StarBase <|-- TanLang
StarBase <|-- JuMen
StarBase <|-- TianXiang
StarBase <|-- TianLiang
StarBase <|-- QiSha
StarBase <|-- PoJun
StarBase <|-- WenChang
StarBase <|-- WenQu
StarBase <|-- HuoXing
StarBase <|-- LingXing
StarBase <|-- DiJie
StarBase <|-- TianKong
StarBase <|-- TaiFu
StarBase <|-- FengGao
StarBase <|-- ZuoFu
StarBase <|-- YouBi
StarBase <|-- TianXing
StarBase <|-- TianYao
StarBase <|-- TianMa
StarBase <|-- JieShen
StarBase <|-- TianWu
StarBase <|-- TianYue_2
StarBase <|-- YinSha
StarBase <|-- SanTai
StarBase <|-- BaZuo
StarBase <|-- EnGuang
StarBase <|-- TianGui
StarBase <|-- LuCun_
StarBase <|-- QingYang
StarBase <|-- TuoLuo
StarBase <|-- TianKui
StarBase <|-- TianYue
StarBase <|-- TianGuan
StarBase <|-- TianFu_2
StarBase <|-- HuaLu
StarBase <|-- HuaQuan
StarBase <|-- HuaKe
StarBase <|-- HuaJi
StarBase <|-- BoShi
StarBase <|-- LiShi
StarBase <|-- QingLong
StarBase <|-- XiaoHao
StarBase <|-- JiangJun
StarBase <|-- ZouShu
StarBase <|-- FeiLian
StarBase <|-- XiShen
StarBase <|-- BingFu
StarBase <|-- DaHao
StarBase <|-- FuBing
StarBase <|-- GuanFu
StarBase <|-- DiKong
StarBase <|-- TianKu
StarBase <|-- TianXu
StarBase <|-- LongChi
StarBase <|-- FengGe
StarBase <|-- HongLuan
StarBase <|-- TianXi
StarBase <|-- FeiLian_2
StarBase <|-- PoSui
StarBase <|-- GuChen
StarBase <|-- GuaSu
StarBase <|-- TianCai
StarBase <|-- TianShou
StarBase <|-- ChangSheng
StarBase <|-- MuYu
StarBase <|-- GuanDai
StarBase <|-- LinGuan
StarBase <|-- DiWang
StarBase <|-- ShuaiXing
StarBase <|-- BingXing
StarBase <|-- SiXing
StarBase <|-- MuXing
StarBase <|-- JueXing
StarBase <|-- TaiXing
StarBase <|-- YangXing

class Case {
    - info: sizhu
    - s1: BodyPalace
    - s2: LifePalace
    - s3: BrotherPalace
    - s4: CouplePalace
    - s5: ChildrenPalace
    - s6: MoneyPalace
    - s7: DiseasePalace
    - s8: MigrationPalace
    - s9: SlavePalace
    - s10: FunctionaryPalace
    - s11: FarmlandPalace
    - s12: FortunePalace
    - s13: ParentPalace
    - wuxing: WuXingJuXing
    - s15: ZiWei
    - s16: TianJi
    - s17: TaiYang
    - s18: WuQu
    - s19: TianTong
    - s20: LianZhen
    - s21: TianFu
    - s22: TaiYin
    - s23: TanLang
    - s24: JuMen
    - s25: TianXiang
    - s26: TianLiang
    - s27: QiSha
    - s28: PoJun
    - s29: WenChang
    - s30: WenQu
    - s31: HuoXing
    - s32: LingXing
    - s33: DiJie
    - s34: TianKong
    - s35: TaiFu
    - s36: FengGao
    - s37: ZuoFu
    - s38: YouBi
    - s39: TianXing
    - s40: TianYao
    - s41: TianMa
    - s42: JieShen
    - s43: TianWu
    - s44: TianYue_2
    - s45: YinSha
    - s46: SanTai
    - s47: BaZuo
    - s48: EnGuang
    - s49: TianGui
    - s50: LuCun_
    - s51: QingYang
    - s52: TuoLuo
    - s53: TianKui
    - s54: TianYue
    - s55: TianGuan
    - s56: TianFu_2
    - s57: HuaLu
    - s58: HuaQuan
    - s59: HuaKe
    - s60: HuaJi
    - s61: BoShi
    - s62: LiShi
    - s63: QingLong
    - s64: XiaoHao
    - s65: JiangJun
    - s66: ZouShu
    - s67: FeiLian
    - s68: XiShen
    - s69: BingFu
    - s70: DaHao
    - s71: FuBing
    - s72: GuanFu
    - s73: DiKong
    - s74: TianKu
    - s75: TianXu
    - s76: LongChi
    - s77: FengGe
    - s78: HongLuan
    - s79: TianXi
    - s80: FeiLian_2
    - s81: PoSui
    - s82: GuChen
    - s83: GuaSu
    - s84: TianCai
    - s85: TianShou
    - s86: ChangSheng
    - s87: MuYu
    - s88: GuanDai
    - s89: LinGuan
    - s90: DiWang
    - s91: ShuaiXing
    - s92: BingXing
    - s93: SiXing
    - s94: MuXing
    - s95: JueXing
    - s96: TaiXing
    - s97: YangXing
    - _stars[100]: StarBase[]
    + _yinyang: YinYang
    + _gender: Gender
    + _name: std::string
    + _remark: std::string

    + Case(BBirthTime: unsigned long long = 199002231934, LLongitude: double = 120.0, ggender: Gender = Gender::Male, nname: std::string = "张三", rremark: std::string = "无备注")
    + show()
    + Case(c: const Case&)
}


class Type {
    - _Name: std::string
    - _Cases: std::vector<Case>
    + Type(nname: std::string = "未命名分类")
    + GetName(): std::string
    + AddCase(c: Case)
    + ShowAmount(): int
}

class TypesManage {
    - _Types: std::vector<Type>
    + TypesManage()
    + AddType(name: std::string)
    + ShowAmount(): int
}

Type "1" *-- "*" Case : _Cases
TypesManage "1" *-- "*" Type : _Types
Case "1" -- "100" StarBase : _stars
sizhu "1" *-- "1" Case : info
WuXingJuXing "1" *-- "1" Case : wuxing
@enduml